--- a/Slike/p-reg.tex
+++ b/Slike/p-reg.tex
@@ -1,6 +1,8 @@
 \begin{figure}
 	\centering
 	\includegraphics[height=7cm]{./Slike/graph-p-reg.eps}
+	\put(-200,0){\v{C}as /t}
+	\rotatebox{-90}{\put(-150,0){Kot v sklepu /rad}}
 	\caption{}
 	\label{graph:p-reg}
 \end{figure}
