--- a/literatura.bib
+++ b/literatura.bib
@@ -105,6 +105,14 @@
 	year={2014},
 }
 
+@article{omrcen_jr3,
+	title={Meritev gibanja kolena z industrijskim robotom - avtomatska kompenzacija gravitacije prijemala},
+	author={Omr?en, Damir and Nemec, Bojan},
+	journal={Strojni?ki vestnik},
+	pages={87 - 97},
+	year={2002},
+}
+
 @article{eppinger_force_dynamics,
 	title={Three Dynamic Problems in Robot Force Control},
 	author={Eppinger, Steven D. and Seering, Warren P.},
