--- a/Slike/pa10-servocontroller.tex
+++ b/Slike/pa10-servocontroller.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{./Slike/pa10-servocontroller.png}
+	\includegraphics[height=\textwidth]{./Slike/pa10-servocontroller.png}
 	\caption{Tehni\v{c}na risba ohi\v{s}ja krmilnika servo motorjev. Povzeto po \cite{pa10-manual}.}
 	\label{fig:pa10-dh}
 \end{figure}
